# fosslight_scanner

./: .bumpversion.cfg  .gitmodules  CHANGELOG.md  Dockerfile  README.md  REUSE.toml  bone3.py  dockerRun.sh  e -i HEAD~2  entrypoint.sh  fosslight_runner.py  fosslight_wrapper.py  fosslight_wrapper_mac.command  fosslight_wrapper_ubuntu.py  logBufferClear.py  pyproject.toml  requirements-dev.txt  requirements.txt  setting.json  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-daily.yml  docker-build-push.yml  docker-publish.yml  docker-release.yml  publish-release.yml  pull-request.yml  release-drafter-config.yml
.reuse/: dep5
docs/: gitauthentication.md
src/fosslight_scanner/: _get_input.py  _help.py  _parse_setting.py  _run_compare.py  cli.py  common.py  fosslight_scanner.py  fosslight_wrapper_mac.command
src/fosslight_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fosslight_scanner/resources/: bom_compare.html
tests/: after.yaml  conftest.py  requirements.txt  setting.json  test__get_input.py  test__help.py  test__parse_setting.py  test__run_compare.py  test_cli.py  test_common.py  test_fosslight_scanner.py
tests/fixtures/: setting.json
tests/fixtures/compare/: before.yaml
tests/fixtures/scan_project/: .gitignore  pyproject.toml  sample_code.py
